[package]
name = "actix_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.4.3"
actix-rt = "2.6.0"
futures = "0.3.5"
actix-web = "4"
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11.6"}
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99"
regex = "1.5.4"